# Liun

./: .gitignore  COMPOSITION_PROOF.md  Cargo.toml  DESIGN.md  OPEN_PROBLEMS.md  README.md  THREAT_MODEL.md  deny.toml  pyproject.toml
contracts/: foundry.toml
contracts/src/: LiunPool.sol
contracts/test/: LiunPool.t.sol
crates/liun-channel/: Cargo.toml
crates/liun-channel/src/: bench_parallel.rs  channel.rs  exchange.rs  handshake.rs  lib.rs  manager.rs  wire.rs
crates/liun-consensus/: Cargo.toml
crates/liun-consensus/src/: committee.rs  lib.rs
crates/liun-dht/: Cargo.toml
crates/liun-dht/src/: distance.rs  lib.rs  message.rs  node.rs  routing.rs
crates/liun-dht/tests/: dht_integration.rs  dht_receipts.rs  parser_fuzz.rs
crates/liun-dkg/: Cargo.toml
crates/liun-dkg/src/: lib.rs
crates/liun-overlay/: Cargo.toml
crates/liun-overlay/src/: bootstrap.rs  directory.rs  lib.rs  peer_intro.rs  relay_client.rs  relay_server.rs  trust.rs
crates/liun-overlay/tests/: bootstrap_integration.rs  relay_receipts.rs
crates/liun-receipts/: Cargo.toml
crates/liun-receipts/src/: lib.rs  recorder.rs
crates/liun-receipts/tests/: e2e_op_flow.rs
crates/liun-tally/: Cargo.toml
crates/liun-tally/src/: lib.rs
crates/liun-uss/: Cargo.toml
crates/liun-uss/src/: lagrange.rs  lib.rs  shamir.rs  signer.rs  verifier.rs
crates/liuproto-core/: Cargo.toml
crates/liuproto-core/proofs/: bitwuzla_gf61.py
crates/liuproto-core/src/: bench_mac.rs  bench_noise.rs  endpoint.rs  entropy.rs  gf61.rs  identity.rs  kani_proofs.rs  lib.rs  link.rs  mac.rs  noise.rs  pool.rs  prewarm.rs  privacy_amp.rs  reconciliation.rs  rng.rs  storage.rs
crates/liuproto-core/tests/: properties.proptest-regressions  properties.rs  spec_vectors.rs
deploy/: Dockerfile  grafana-dashboard.json  liun-node.service  prometheus-alerts.yml
deploy/packaging/deb/: control.template  postinst
deploy/packaging/homebrew/: liun-node.rb
deploy/packaging/rpm/: liun-node.spec.template
devnet/: .gitignore  README.md
devnet/scripts/: chaos.sh  chat.sh  down.sh  live.sh  logs.sh  nettest.sh  rebuild.sh  reset.sh  restart.sh  status.sh  up.sh
docs/: DEPLOYMENT.md  DHT.md  FUNDING.md  PROTOCOL.md  RELAY.md  SECURITY.md  THREAT_MODEL.md  relays.example.toml
protocols/: 01-bootstrap.md  02-peer-intro.md  03-shamir-dkg.md  04-uss-signing.md  05-liu-integration.md  06-local-trust.md
roadmap/: ROADMAP.md
scripts/: deploy_nettest.sh  install-trandom.sh  run_local_network.sh
sim/: __init__.py
sim/adversary/: __init__.py  adversary.py  collusion.py  eclipse.py  slow_compromise.py  sybil.py
sim/core/: __init__.py  clock.py  liu_adapter.py  message_bus.py  mock_liu.py  topology.py
sim/metrics/: __init__.py  collector.py  efficiency.py  reporter.py
sim/network/: __init__.py  graph_gen.py  sim_network.py  sim_node.py
src/: admin.rs  hardening.rs  main.rs  shutdown.rs
src/liun/: __init__.py  bootstrap.py  dkg.py  gf61.py  liu_channel.py  node.py  overlay.py  shamir.py  uss.py
tests/: conftest.py  e2e_network.rs  e2e_no_psk.rs  e2e_parallel.rs  e2e_scale.rs  e2e_ten_nodes.rs  e2e_two_processes.rs  test_adversary.py  test_bootstrap.py  test_dkg.py  test_gf61.py  test_newton.py  test_pagerank.py  test_peer_intro.py  test_real_liu.py  test_scenarios.py  test_scenarios_extended.py  test_shamir.py  test_sim_core.py  test_sim_network.py  test_uss.py
