[package]
name = "liun-overlay"
version = "0.1.0"
edition = "2024"
description = "Overlay network: bootstrap, peer introduction, trust computation"

[dependencies]
liuproto-core = { path = "../liuproto-core" }
liun-receipts = { path = "../liun-receipts" }
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
liun-tally = { path = "../liun-tally" }
getrandom = "0.3"
tokio = { version = "1", features = ["full"] }
