[package]
name = "liun-receipts"
version = "0.1.0"
edition = "2024"
description = "ITS co-authenticated operation receipts for the Liun public-goods funding pool"

[dependencies]
liuproto-core = { path = "../liuproto-core" }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
getrandom = "0.3"

[dev-dependencies]
getrandom = "0.3"
liun-tally = { path = "../liun-tally" }
