[package]
name = "liuproto-core"
version = "0.1.0"
edition = "2024"
description = "Core ITS primitives: M61 field arithmetic, polynomial MAC, Gaussian noise, pool recycling"

[dependencies]
getrandom = "0.3"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

[dev-dependencies]
proptest = "1"
[[bin]]
name = "bench_mac"
path = "src/bench_mac.rs"

[[bin]]
name = "bench_noise"
path = "src/bench_noise.rs"
